--- a/twig/details_malgruppe.twig.html
+++ b/twig/details_malgruppe.twig.html
@@ -1,40 +1,42 @@
-<style>
-.well {
-	background: #fff;
-}
-</style>
 <h2>Statistikk for {{monstring.name}} <small>Detaljer: deltakelse i forhold til målgruppe</small></h2>
 
-<div class="container col-xs-12">
-	<div class="well">
-		<table class="table table-striped" style="max-width: 700px">
-			<thead>
-				<tr>
-					<th></th>
-				{% for kategori, data in stat.malgruppe|first %}
-					<th style="text-align:right;" width="18%">{{kategori}}</th>
+{% embed "style.twig.html" %}{% endembed %}
+{% embed "script.twig.html" %}{% endembed %}
+{% embed "nav.twig.html" %}{% endembed %}
+{% for stat in statistikk %}
+	{% embed "separator.twig.html" %}{% endembed %}
+	
+	<div class="container col-xs-12">
+		<div class="well">
+			<table class="table table-striped" style="max-width: 700px">
+				<thead>
+					<tr>
+						<th></th>
+					{% for kategori, data in stat.malgruppe|first %}
+						<th style="text-align:right;" width="18%">{{kategori}}</th>
+					{% endfor %}
+					</tr>
+				</thead>
+				{% for ar, data in stat.malgruppe %}
+					<tr>
+					    <th>{{ar}}</th>
+				    	{% for gruppe, antall in data %} 
+				    	<td align="right">{{antall}} %</td>
+				    	{% endfor %}
+					</tr>
 				{% endfor %}
-				</tr>
-			</thead>
-			{% for ar, data in stat.malgruppe %}
-				<tr>
-				    <th>{{ar}}</th>
-			    	{% for gruppe, antall in data %} 
-			    	<td align="right">{{antall}} %</td>
-			    	{% endfor %}
-				</tr>
-			{% endfor %}
-		</table>
-
-		<div class="row pull-right">
-			<a class="btn btn-sm btn-default" href="?page=UKMrapport_admin&stat={{home}}">Tilbake til oversikt</a>
+			</table>
+	
+			<div class="row pull-right">
+				<a class="btn btn-sm btn-default" href="?page=UKMrapport_admin&stat={{home}}">Tilbake til oversikt</a>
+			</div>
+	
 		</div>
-
 	</div>
-</div>
-
-<div class="container col-xs-12">
-	<div class="well">
-		{% embed "malgruppe.twig.html" %}{% endembed %}	
+	
+	<div class="container col-xs-12">
+		<div class="well">
+			{% embed "malgruppe.twig.html" %}{% endembed %}	
+		</div>
 	</div>
-</div>
+{% endfor %}
