--- a/twig/kjonnsfordeling.twig.html
+++ b/twig/kjonnsfordeling.twig.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
   google.load("visualization", "1", {packages:["corechart"]});
-  google.setOnLoadCallback(statistikk_kjonnsfordeling);
+  google.setOnLoadCallback(statistikk_kjonnsfordeling_{{stat.kommune.id}});
 
-  function statistikk_kjonnsfordeling() {
+  function statistikk_kjonnsfordeling_{{stat.kommune.id}}() {
     var data = google.visualization.arrayToDataTable([
       ['Kjønn', 'Antall personer'],
       {% for kategori, personer in stat.kjonnsfordeling_iar %}
@@ -14,9 +14,9 @@
       title: 'Kjønnsfordeling',
     };
 
-    var chart = new google.visualization.PieChart(document.getElementById('statistikk_kjonnsfordeling'));
+    var chart = new google.visualization.PieChart(document.getElementById('statistikk_kjonnsfordeling_{{stat.kommune.id}}'));
     chart.draw(data, options);
   }
 </script>
 
-<div id="statistikk_kjonnsfordeling" style="width: 100%; min-height: 300px;"></div>
+<div id="statistikk_kjonnsfordeling_{{stat.kommune.id}}" style="width: 100%; min-height: 300px;"></div>
