--- a/twig/sjangerfordeling.twig.html
+++ b/twig/sjangerfordeling.twig.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
   google.load("visualization", "1", {packages:["corechart"]});
-  google.setOnLoadCallback(statistikk_sjangerfordeling);
+  google.setOnLoadCallback(statistikk_sjangerfordeling_{{stat.kommune.id}});
 
-  function statistikk_sjangerfordeling() {
+  function statistikk_sjangerfordeling_{{stat.kommune.id}}() {
     var data = google.visualization.arrayToDataTable([
       ['Kategori', 'Antall personer'],
       {% for kategori, personer in stat.sjangerfordeling_iar %}
@@ -18,9 +18,9 @@
       legend: {position: 'none'}
     };
 
-    var chart = new google.visualization.ColumnChart(document.getElementById('statistikk_sjangerfordeling'));
+    var chart = new google.visualization.ColumnChart(document.getElementById('statistikk_sjangerfordeling_{{stat.kommune.id}}'));
     chart.draw(data, options);
   }
 </script>
 
-<div id="statistikk_sjangerfordeling" style="width: 100%; min-height: 300px;"></div>
+<div id="statistikk_sjangerfordeling_{{stat.kommune.id}}" style="width: 100%; min-height: 300px;"></div>
