forsøkt sideskift ved utskrift

--- a/twig/home.twig.html
+++ b/twig/home.twig.html
@@ -4,8 +4,6 @@
 {% embed "nav.twig.html" %}{% endembed %}
 
 {% for stat in statistikk %}
-
-
 	<div style="margin-right: 30px;">
 	{% embed "separator.twig.html" %}{% endembed %}
 	</div>
@@ -63,6 +61,6 @@
 	
 			</div>
 		</div>
-	
 	</div>
+	<div class="clearfix pagebreak"></div>
 {% endfor %}
