--- a/twig/script.twig.html
+++ b/twig/script.twig.html
@@ -1,28 +1,28 @@
 <script type="text/javascript">
 jQuery(document).ready(function () {
     jQuery(window).resize(function(){
-		{% for stat in statistikk %}
+		{% for kommune in statistikk %}
 
-			if (typeof statistikk_deltakere_{{stat.kommune.id}} == 'function')
-			statistikk_deltakere_{{stat.kommune.id}}();
+			if (typeof statistikk_deltakere_{{kommune.metadata.id}} == 'function')
+			statistikk_deltakere_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_sjangerfordeling_{{stat.kommune.id}} == 'function')
-			statistikk_sjangerfordeling_{{stat.kommune.id}}();
+			if (typeof statistikk_sjangerfordeling_{{kommune.metadata.id}} == 'function')
+			statistikk_sjangerfordeling_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_kjonnsfordeling_{{stat.kommune.id}} == 'function')
-			statistikk_kjonnsfordeling_{{stat.kommune.id}}();
+			if (typeof statistikk_kjonnsfordeling_{{kommune.metadata.id}} == 'function')
+			statistikk_kjonnsfordeling_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_details_kjonnsfordeling_{{stat.kommune.id}} == 'function')
-			statistikk_details_kjonnsfordeling_{{stat.kommune.id}}();
+			if (typeof statistikk_details_kjonnsfordeling_{{kommune.metadata.id}} == 'function')
+			statistikk_details_kjonnsfordeling_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_malgruppe_{{stat.kommune.id}} == 'function')
-			statistikk_malgruppe_{{stat.kommune.id}}();
+			if (typeof statistikk_malgruppe_{{kommune.metadata.id}} == 'function')
+			statistikk_malgruppe_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_aldersfordeling_{{stat.kommune.id}} == 'function')
-			statistikk_aldersfordeling_{{stat.kommune.id}}();
+			if (typeof statistikk_aldersfordeling_{{kommune.metadata.id}} == 'function')
+			statistikk_aldersfordeling_{{kommune.metadata.id}}();
 
-			if (typeof statistikk_details_sjangerfordeling_{{stat.kommune.id}} == 'function')
-				statistikk_details_sjangerfordeling_{{stat.kommune.id}}();
+			if (typeof statistikk_details_sjangerfordeling_{{kommune.metadata.id}} == 'function')
+				statistikk_details_sjangerfordeling_{{kommune.metadata.id}}();
 		{% endfor %}
     });
 });
