--- a/twig/deltakere.twig.html
+++ b/twig/deltakere.twig.html
@@ -1,12 +1,12 @@
 <script type="text/javascript">
   google.load("visualization", "1", {packages:["corechart"]});
-  google.setOnLoadCallback(statistikk_deltakere_{{stat.kommune.id}});
+  google.setOnLoadCallback(statistikk_deltakere_{{kommune.metadata.id}});
 
-  function statistikk_deltakere_{{stat.kommune.id}}() {
+  function statistikk_deltakere_{{kommune.metadata.id}}() {
     var data = google.visualization.arrayToDataTable([
       ['År', 'Antall personer', 'Antall innslag'],
-      {% for ar, data in stat.deltakere %}
-      ['{{ar}}',{{data.personer}},{{data.innslag}}]{{loop.last?'':','}}
+      {% for ar, data in kommune.deltakere %}
+      ['{{ar}}',{{data.personer*1}},{{data.innslag*1}}]{{loop.last?'':','}}
       {% endfor %}
     ]);
 
@@ -16,9 +16,9 @@
       pointSize: 5
     };
 
-    var chart = new google.visualization.LineChart(document.getElementById('statistikk_deltakere_{{stat.kommune.id}}'));
+    var chart = new google.visualization.LineChart(document.getElementById('statistikk_deltakere_{{kommune.metadata.id}}'));
     chart.draw(data, options);
   }
 </script>
 
-<div id="statistikk_deltakere_{{stat.kommune.id}}" style="width: 100%; min-height: 300px;"></div>
+<div id="statistikk_deltakere_{{kommune.metadata.id}}" style="width: 100%; min-height: 300px;"></div>
