--- a/twig/details_sjangerfordeling.twig.html
+++ b/twig/details_sjangerfordeling.twig.html
@@ -4,7 +4,7 @@
 {% embed "script.twig.html" %}{% endembed %}
 {% embed "nav.twig.html" %}{% endembed %}
 
-{% for stat in statistikk %}
+{% for kommune in statistikk %}
 	{% embed "separator.twig.html" %}{% endembed %}
 	
 	<div class="container col-xs-12">
@@ -41,7 +41,7 @@
 						<th>Total</th>
 					</tr> #}
 				</thead>
-				{% for ar, data in stat.sjangerfordeling %}
+				{% for ar, data in kommune.sjangerfordeling %}
 					<tr>
 						<td align="right">{{ar}}</td>
 						<th style="text-align:right;" align="right">{{data.total}}</th>
@@ -74,12 +74,12 @@
 		<div class="well">
 			<script type="text/javascript">
 			  google.load("visualization", "1", {packages:["corechart"]});
-			  google.setOnLoadCallback(statistikk_details_sjangerfordeling_{{stat.kommune.id}});
+			  google.setOnLoadCallback(statistikk_details_sjangerfordeling_{{kommune.metadata.id}});
 			
-			  function statistikk_details_sjangerfordeling_{{stat.kommune.id}}() {
+			  function statistikk_details_sjangerfordeling_{{kommune.metadata.id}}() {
 			    var data = google.visualization.arrayToDataTable([
 			      ['Sesong', 'Musikk', 'Dans', 'Teater', 'Litteratur', 'Annet på scenen', 'Film', 'Utstilling', 'Konferansier', 'Nettredaksjon', 'Arrangør', 'Sceneteknikk', 'Matkultur', 'Diverse'],
-				{% for ar, data in stat.sjangerfordeling %}
+				{% for ar, data in kommune.sjangerfordeling %}
 			      ['{{ar}}',{{data.Musikk*1}},{{data.Dans*1}},{{data.Teater*1}},{{data.Litteratur*1}},{{data.Annet_scene*1}},{{data.Film*1}},{{data.Utstilling*1}},{{data.Konferansier*1}},{{data.Nettredaksjon*1}},{{data.Arrangor*1}},{{data.Sceneteknikk*1}},{{data.Matkultur*1}},{{data.Diverse*1}}]{{loop.last?'':','}}
 			      {% endfor %}
 			    ]);
@@ -90,11 +90,11 @@
 			      pointSize: 5,
 			    };
 			
-			    var chart = new google.visualization.LineChart(document.getElementById('statistikk_details_sjangerfordeling_{{stat.kommune.id}}'));
+			    var chart = new google.visualization.LineChart(document.getElementById('statistikk_details_sjangerfordeling_{{kommune.metadata.id}}'));
 			    chart.draw(data, options);
 			  }
 			</script>
 			
-			<div id="statistikk_details_sjangerfordeling_{{stat.kommune.id}}" style="width: 100%; min-height: 700px;"></div>	</div>
+			<div id="statistikk_details_sjangerfordeling_{{kommune.metadata.id}}" style="width: 100%; min-height: 700px;"></div>	</div>
 	</div>
 {% endfor %}
