--- a/twig/separator.twig.html
+++ b/twig/separator.twig.html
@@ -2,7 +2,7 @@
 	<div class="clearfix"></div>
 	<div class="container col-xs-12">
 		<div class="well headline">
-			<h3 align="center" id="kommune_{{stat.kommune.id}}">{{stat.kommune.name}}</h3>
+			<h3 align="center" id="kommune_{{kommune.metadata.id}}">{{kommune.metadata.name}}</h3>
 		</div>
 	</div>
 {% endif %}
