--- a/twig/sjangerfordeling.twig.html
+++ b/twig/sjangerfordeling.twig.html
@@ -1,11 +1,11 @@
 <script type="text/javascript">
   google.load("visualization", "1", {packages:["corechart"]});
-  google.setOnLoadCallback(statistikk_sjangerfordeling_{{stat.kommune.id}});
+  google.setOnLoadCallback(statistikk_sjangerfordeling_{{kommune.metadata.id}});
 
-  function statistikk_sjangerfordeling_{{stat.kommune.id}}() {
+  function statistikk_sjangerfordeling_{{kommune.metadata.id}}() {
     var data = google.visualization.arrayToDataTable([
       ['Kategori', 'Antall personer'],
-      {% for kategori, personer in stat.sjangerfordeling_iar %}
+      {% for kategori, personer in kommune.sjangerfordeling_iar %}
       ['{{kategori}}',{{personer}}]{{loop.last?'':','}}
       {% endfor %}
     ]);
@@ -18,9 +18,9 @@
       legend: {position: 'none'}
     };
 
-    var chart = new google.visualization.ColumnChart(document.getElementById('statistikk_sjangerfordeling_{{stat.kommune.id}}'));
+    var chart = new google.visualization.ColumnChart(document.getElementById('statistikk_sjangerfordeling_{{kommune.metadata.id}}'));
     chart.draw(data, options);
   }
 </script>
 
-<div id="statistikk_sjangerfordeling_{{stat.kommune.id}}" style="width: 100%; min-height: 300px;"></div>
+<div id="statistikk_sjangerfordeling_{{kommune.metadata.id}}" style="width: 100%; min-height: 300px;"></div>
