Målgruppedetaljer OK fylke

--- a/twig/details_malgruppe.twig.html
+++ b/twig/details_malgruppe.twig.html
@@ -39,4 +39,33 @@
 			{% embed "malgruppe.twig.html" %}{% endembed %}	
 		</div>
 	</div>
+	
+	{% if stat_type == 'fylke' %}
+		<h2>Alle kommuner i {{monstring.name}}</h2>
+		
+		<div class="container col-xs-12">
+			<div class="well">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th></th>
+							{% for ssn in seasons %}
+							<th>{{ssn}}</th>
+							{% endfor %}
+						</tr>
+					</thead>
+					<tbody>
+						{% for kommune, data in dekningsgrad %}
+							<tr>
+								<th>{{kommune}}</th>
+								{% for season, details in data %}
+								<td>{{details.dekningsgrad}}%</td>
+								{% endfor %}
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	{% endif %}
 {% endfor %}
