--- a/twig/details_kjonnsfordeling.twig.html
+++ b/twig/details_kjonnsfordeling.twig.html
@@ -26,7 +26,7 @@
 			</table>
 	
 			<div class="row pull-right">
-				<a class="btn btn-sm btn-default" href="?page=UKMrapport_admin&stat={{home}}">Tilbake til oversikt</a>
+				<a class="btn btn-sm btn-default" href="?page=UKMrapport_admin&stat=home&fylke={{stat_fylke}}&norge={{stat_norge}}">Tilbake til oversikt</a>
 			</div>
 	
 		</div>
