--- a/twig/monstringer_stacked.twig.html
+++ b/twig/monstringer_stacked.twig.html
@@ -16,7 +16,7 @@
     ]);
 
     var options = {
-      title: 'Alle lokalmønstringer, stablet oppå hverandre',
+      title: 'Alle {{stat_type=='land' ? 'fylker' : 'lokalmønstringer'}}, stablet oppå hverandre',
       vAxis: {'minValue': 0},
       isStacked: true,
       pointSize: 5
